--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,12 +21,19 @@ dependencies:
   firebase_auth: ^4.4.2
   firebase_storage: ^11.1.1
   flutterfire_ui: ^0.4.3+12
+  page_indicator: ^0.4.1
+  get_it: ^7.3.0
+
+
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.1
+  mocktail: ^0.3.0
+  bloc_test: ^9.1.1
 
 
 flutter:
@@ -34,10 +41,8 @@ flutter:
 
   uses-material-design: true
 
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
+  assets:
+    - assets/
 
   # fonts:
   #   - family: Schyler
