--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   get_it: ^7.3.0
   google_sign_in: ^5.4.2
   equatable: ^2.0.5
-
+  cached_network_image: ^3.2.3
 
 
 dev_dependencies:
