--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   google_sign_in: ^5.4.2
   equatable: ^2.0.5
   cached_network_image: ^3.2.3
+  image_picker: ^0.8.7+4
 
 
 dev_dependencies:
